fabric/testdata/out/ing_spp-product-identity-post-internal-product-identities-gtin-assignments-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-product-identity-master-572\":0.0,\"spp-product-identity-master-573\":100.0}","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/internal-product-identities/gtin-assignments\") \u0026\u0026 Method(\"POST\")
      \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\")
      \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"aalexandre\",
      \"https://identity.zalando.com/managed-id\", \"gcarta\", \"https://identity.zalando.com/managed-id\",
      \"kanli\", \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"egalligan\", \"https://identity.zalando.com/managed-id\", \"rlagarferrei\",
      \"https://identity.zalando.com/managed-id\", \"msung\", \"https://identity.zalando.com/managed-id\",
      \"dgordon\", \"https://identity.zalando.com/managed-id\", \"aortega\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-post-internal-product-identities-gtin-assignments-admins","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-master-572","servicePort":8080},"p [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-product-identity-master-572":0.0,"spp-product-identity-master-573":100.0}'
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/internal-product-identities/gtin-assignments")
      && Method("POST") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "aalexandre",
      "https://identity.zalando.com/managed-id", "gcarta", "https://identity.zalando.com/managed-id",
      "kanli", "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "egalligan", "https://identity.zalando.com/managed-id", "rlagarferrei", "https://identity.zalando.com/managed-id",
      "msung", "https://identity.zalando.com/managed-id", "dgordon", "https://identity.zalando.com/managed-id",
      "aortega") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-07-05T08:38:27Z"
  generation: 149
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-post-internal-product-identities-gtin-assignments-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383881074"
  uid: 428da9c7-9f00-11e9-82cb-0689871ab680
spec:
  rules:
  - host: spp-product-identity.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-product-identity-api.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-identity-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
